  line 5, 10, 15, etc. Before it would highlight line 1, 6, 11, etc.
- 'Find Selection' initially selects text in 'Find' field now
- Measurement units now highlighted in CSS mode
- The file dialog's file name field is no longer cleared when the user
  changes directories
- Improved 'magic caret' code when moving caret up and down

+ Neutral

- Session code moved to BufferList plugin. jEdit now supports one,
  default session only

+ Bug Fixes

- jEdit no longer uses the java.specification.version property, because
  on IBM 1.3 VMs, it is set to 1.2
- The 'Rename' command was never shown in the file system's right-click
  menu if the root of the directory tree was 'favorites:', even if a
  file inside a directory on the local filesystem was created
- Minor 'New File' command bug fixed
- Fixed minor mapping bug in JEditTextArea.invalidateLineRange() which
  caused gutter repaint problems when deleting lines

+ API Changes

- GUIUtilities.showFileDialog() officially deprecated. Use
  GUIUtilities.showVFSFileDialog() instead

* Version 3.1pre3

+ New Features

- 'Narrow Buffer to Selection' command, temporarily hides all lines
  except those in the selection. Use 'Expand All Folds' command to
  make all lines visible. Default shortcut is C+e n
- 'Expand Fold One Level' command
- 'Select Fold' command; Control-clicking in gutter also has the same
  effect

+ Enhancements

- Folding and narrowing documentation in user's guide
- You begged, you pleaded, you bribed, you sent death threats -- and
  now you have it:

  GUIUtilities.confirm(Component comp, String name, Object[] args,
      int buttons, int type);

- Variables and functions defined in the 'Startup' macro are now
  available to all macros and BeanShell commands
- Edit mode for "B formal method" (Bruno Tatibouet)
  (see http://www.comlab.ox.ac.uk/archive/formal-methods/b.html)
- New directories are created in the currently selected directory,
  instead of the root directory of the tree