@@ -81,11 +81,25 @@ public class Registers
 
 	/**
 	 * Convinience method that appends the text selected in the specified
-	 * text area to the specified register.
+	 * text area to the specified register, with a newline between the old
+	 * and new text.
 	 * @param textArea The text area
 	 * @param register The register
 	 */
 	public static void append(JEditTextArea textArea, char register)
+	{
+		append(textArea,register,"\n");
+	}
+
+	/**
+	 * Convinience method that appends the text selected in the specified
+	 * text area to the specified register.
+	 * @param textArea The text area
+	 * @param register The register
+	 * @param separator The text to insert between the old and new text
+	 */
+	public static void append(JEditTextArea textArea, char register,
+		String separator)
 	{
 		String selection = textArea.getSelectedText();
 		if(selection == null)
@@ -94,7 +108,7 @@ public class Registers
 		Register reg = getRegister(register);
 
 		if(reg != null && reg.toString() != null)
-			selection = reg.toString() + "\n" + selection;
+			selection = reg.toString() + separator + selection;
 
 		setRegister(register,selection);
 		HistoryModel.getModel("clipboard").addItem(selection);
@@ -620,6 +634,9 @@ public class Registers
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.17  2001/03/23 10:38:50  sp
+ * stuffs
+ *
  * Revision 1.16  2000/12/01 07:39:59  sp
  * Batch search renamed to HyperSearch, bug fixes
  *
